advance detectors added for reps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
+    <string name="accessibility_service_description">Monitors opened apps to enforce focus with push-up unlocks.</string>
+
     <string name="app_name">Pushup Lock</string>
 </resources>
